--- a/index.css
+++ b/index.css
@@ -5,13 +5,17 @@ body {
     display: grid;
     text-align: center;
 }
+
 p {
     line-height: 1.6em;
+    font-size: 20px;
 }
+
 h1, h2, h3, h4, h5, h6 {
     line-height: 2em;
     letter-spacing: 2px;
 }
+
 nav {
     grid-area: 1 / 1 / 2 / 2;
     text-align: center;
@@ -23,9 +27,11 @@ nav {
     margin: 2% 0%;
     z-index: 1;
 }
-a { 
+
+a {
     color: white;
 }
+
 .main {
     display: grid;
     grid-template-rows: 10% 20% 20% 20% 20% 10%;
@@ -35,7 +41,8 @@ a {
     background-size: cover;
     height: 110vh;
 }
-#mainblock{
+
+#mainblock {
     grid-area: 3 / 1 / 5 / 2;
     color: #d6d6d6;
     text-shadow: 1px 1px 1px black;
@@ -43,45 +50,56 @@ a {
     letter-spacing: 2px;
     z-index: 1;
 }
+
 #mtb-sub {
     padding: 2% 0%;
 }
+
 .why {
     background-color: #F7F5F6;
     padding: 6% 0% 2% 0%;
-    
 }
+
 .whyblock {
     display: grid;
     grid-template-columns: 5% 30% 30% 30% 5%;
     padding: 5% 0% 5% 0%;
 }
+
 #whyiconblock1 {
     grid-column: 2 / 3;
     padding: 0% 10% 0 10%;
 }
-#whyiconblock2
-{
+
+#whyiconblock2 {
     grid-column: 3 / 4;
     padding: 0% 10% 0 10%;
 }
-#whyiconblock3
-{
-   grid-column: 4 / 5;
-   padding: 0% 10% 0 10%;
+
+#whyiconblock3 {
+    grid-column: 4 / 5;
+    padding: 0% 10% 0 10%;
 }
+
 #photo-icon, #off-icon, #heart-icon, #client-photo {
+    padding-bottom: 10%;
+}
+
+#client-photo {
     padding-bottom: 7%;
 }
+
 #blue-header {
     color: #0844A4;
     padding-bottom: 2%;
 }
+
 .chooseyourtour {
     display: grid;
     grid-template-rows: auto auto;
     grid-template-columns: auto auto;
 }
+
 #choosetour1 {
     grid-area: 1 / 1 / 2 / 2;
     background-image: url("img/carpatian-dragobrat.jpg");
@@ -90,11 +108,13 @@ a {
     background-size: cover;
     max-height: 100%;
 }
+
 #choosetour2 {
     grid-area: 1 / 2 / 2 / 3;
     background-color: #8AB6F7;
     padding: 15% 10%;
 }
+
 #choosetour3 {
     grid-area: 2 / 2 / 3 / 3;
     background-image: url("img/carpatian-lake.jpg");
@@ -103,17 +123,20 @@ a {
     background-size: cover;
     max-height: 100%;
 }
+
 #choosetour4 {
     grid-area: 2 / 1 / 3 / 2;
     background-color: #8AB6F7;
     padding: 15% 10%;
 }
+
 .rewievs {
     background-image: url("img/clients-rewiev.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
+
 .ourclients {
     display: grid;
     grid-template-rows: auto auto;
@@ -122,15 +145,90 @@ a {
     background-color: #f8f9fabf;
     border-radius: 20px;
 }
+
 #testomonials {
     grid-area: 1 / 1 / 2 / 3;
     margin: 5% 0%;
 }
-#client1{
+
+#client1 {
     grid-area: 2 / 1 / 3 / 2;
-    margin: 0% 10% 10% 20%;
+    margin: 0% 10% 10% 10%;
 }
-#client2{
+
+#client2 {
     grid-area: 2 / 2 / 3 / 3;
-    margin: 0% 20% 10% 10%;
+    margin: 0% 10% 10% 10%;
+}
+
+.contact-us {
+    display: grid;
+    grid-template-rows: auto auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto auto auto auto;
+    padding: 8% 5%;
+    background-color: #070808f2;
+}
+
+#contacts {
+    grid-area: 2 / 2 / 3 / 4;
+    padding-bottom: 8%;
+}
+
+#phone, #contactmail, #instagram, #fb {
+    margin: 5% 5%;
+}
+
+#phone {
+    grid-area: 3 / 2 / 4 / 3;
+}
+
+#contactmail {
+    grid-area: 3 / 3 / 4 / 4;
+}
+
+#instagram {
+    grid-area: 4 / 2 / 5 / 3;
+}
+
+#fb {
+    grid-area: 4 / 3 / 5 / 4;
+}
+
+#contactform {
+    grid-area: 2 / 5 / 3 / 9;
+    padding-bottom: 8%;
+    color: #d6d6d6;
+}
+
+#phoneimg, #emailimg, #instagramimg, #fbimg {
+    max-height: 80%;
+}
+
+#contactbody {
+    grid-area: 3 / 5 / 5 / 9;
+}
+
+#name, #tel, #submit-contact-form {
+    border: 2px solid white;
+    margin: 3% 0%;
+    border-radius: 20px;
+    padding: 2% 15% 2% 15%;
+    text-align: center;
+    font-size: 20px;
+    color: white;
+}
+
+#name, #tel {
+    background-color: transparent;
+    border: 2px solid white;
+}
+
+#submit-contact-form {
+    background-color: #c82333;
+}
+
+footer {
+    padding-top: 1%;
+    background-color: #070808f2;
+    border-top: 1px solid grey;
 }
